# pytorch-cifar

./: .gitignore  README.md  main.py  test.py
ncnn/: CMakeLists.txt  readme.md
ncnn/test/: CMakeLists.txt  cifar10_demo.cpp
python/: main.py  test.py
